--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¿Quieres salir conmigo, Mariana? 💖</title>
+    <title>pregunta 💖</title>
 
     <style>
         body {
@@ -75,8 +75,8 @@
 
     <div class="container" id="main-content">
         <img src="https://media.tenor.com/v5x4IcdOx6wAAAAi/cute-cat.gif" alt="gatito">
-        <h1>Mariana, ¿puedo salir contigo? 🥺💖</h1>
-        <p>No soy la gran cosa, pero si me das una oportunidad... te haré muy feliz 💗</p>
+        <h1>pregunta 🥺💖</h1>
+        <p>Nmensaje💗</p>
 
         <button id="si">SI 💘</button>
         <button id="no">NO 😭</button>
