--- a/index.html
+++ b/index.html
@@ -3,129 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pregunta 💖</title>
+    <title>Pregunta</title>
 
     <style>
         body {
             margin: 0;
             padding: 0;
-            background-color: #fff6f6;
-            font-family: "Arial", sans-serif;
+            background-color: #f7f7f7;
+            font-family: Arial, sans-serif;
             text-align: center;
         }
 
         .container {
-            margin-top: 40px;
-            padding: 10px;
+            margin-top: 60px;
+            padding: 20px;
         }
 
         img {
-            width: 60%;
-            max-width: 250px;
+            width: 220px;
+            margin-bottom: 15px;
         }
 
         h1 {
             font-size: 28px;
             color: #333;
-            padding: 0 10px;
+            margin-bottom: 10px;
         }
 
         p {
+            margin-top: -5px;
             font-size: 16px;
-            color: #555;
-            padding: 0 15px;
+            color: #666;
         }
 
-        button {
-            padding: 14px 40px;
+        .btn {
+            padding: 12px 35px;
             margin: 15px;
-            font-size: 20px;
+            font-size: 18px;
             border: none;
-            border-radius: 12px;
+            border-radius: 10px;
             cursor: pointer;
             transition: 0.2s;
         }
 
         #si {
-            background-color: #ff8fab;
-            color: white;
+            background-color: #8bc34a;
+            color: #fff;
         }
 
         #si:hover {
-            background-color: #ff5d85;
+            background-color: #7cb342;
         }
 
         #no {
-            background-color: #d3d3d3;
+            background-color: #e0e0e0;
             color: #333;
-            position: absolute;
-        }
-
-        #no:hover {
-            background-color: #bfbfbf;
+            position: relative;
         }
     </style>
 </head>
-
 <body>
 
-    <audio id="bg-music" autoplay loop>
-        <source src="musica.mp3" type="audio/mpeg">
-    </audio>
+<div class="container">
+    <img src="https://media.tenor.com/v5x4IcdOx6wAAAAi/cute-cat.gif" alt="gatito">
+    <h1>Pregunta seria:</h1>
+    <p>Responde con sinceridad.</p>
 
-    <div class="container" id="main-content">
-        <img src="https://media.tenor.com/v5x4IcdOx6wAAAAi/cute-cat.gif" alt="gatito">
-        <h1>pregunta 🥺💖</h1>
-        <p>Nmensaje💗</p>
+    <button id="si" class="btn">Sí</button>
+    <button id="no" class="btn">No</button>
+</div>
 
-        <button id="si">SI 💘</button>
-        <button id="no">NO 😭</button>
-    </div>
+<script>
+    const btnNo = document.getElementById("no");
+    const btnSi = document.getElementById("si");
 
-    <script>
-        const btnNo = document.getElementById("no");
-        const btnSi = document.getElementById("si");
+    // Mover botón NO infinitamente al tocar o pasar por encima
+    function moverBoton() {
+        const x = Math.random() * (window.innerWidth - 80);
+        const y = Math.random() * (window.innerHeight - 80);
+        btnNo.style.position = "absolute";
+        btnNo.style.left = x + "px";
+        btnNo.style.top = y + "px";
+    }
 
-        function moverBoton() {
-            const maxX = window.innerWidth - btnNo.offsetWidth;
-            const maxY = window.innerHeight - btnNo.offsetHeight;
-            const randomX = Math.random() * maxX;
-            const randomY = Math.random() * maxY;
+    btnNo.addEventListener("mouseover", moverBoton);
+    btnNo.addEventListener("touchstart", moverBoton);
 
-            btnNo.style.left = randomX + "px";
-            btnNo.style.top = randomY + "px";
-        }
-
-        // Para PC
-        btnNo.addEventListener("mouseover", moverBoton);
-
-        // Para CELULAR (touch)
-        btnNo.addEventListener("touchstart", (e) => {
-            e.preventDefault();
-            moverBoton();
-        });
-
-        // Botón SI
-        btnSi.addEventListener("click", () => {
-            document.body.innerHTML = `
-            <div style="margin-top: 70px; padding: 15px;">
-                <h1 style="font-size: 28px;">Te amo mi amor 💞</h1>
-                <p style="font-size: 18px; color:#333;">Gracias por decir que sí, Mariana 💖</p>
-
-                <img src="FOTO-DE-LOS-DOS.jpg" style="width:70%; max-width:300px; border-radius:15px; margin-top:20px;">
-
-                <div style="margin-top:25px; font-size:18px; color:#444; line-height:1.5; padding:10px;">
-                    <!-- Aquí pegas tu carta de dos páginas -->
-                    <p>
-                        [Aquí va tu carta romántica con <br> para saltos de línea]
-                    </p>
-                </div>
-
-                <img src="https://media.tenor.com/g8o0c0Qj7WAAAAAi/cat-love.gif" style="width:55%; max-width:250px;">
+    // Botón SI cambia la pantalla
+    btnSi.addEventListener("click", () => {
+        document.body.innerHTML = `
+            <div style="margin-top: 100px; text-align: center;">
+                <h1>Perfecto.</h1>
+                <p>Respuesta registrada.</p>
+                <img src="https://media.tenor.com/g8o0c0Qj7WAAAAAi/cat-love.gif" width="200">
             </div>
-            `;
-        });
-    </script>
+        `;
+    });
+</script>
 
 </body>
 </html>
