--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¿Quieres salir conmigo, Mariana? 💖</title>
+    <title>Mariana 💖</title>
 
     <style>
         body {
@@ -76,8 +76,10 @@
 
     <div class="container" id="main-content">
         <img src="https://media.tenor.com/v5x4IcdOx6wAAAAi/cute-cat.gif" alt="gatito">
-        <h1>Mariana, ¿puedo salir contigo? 💖</h1>
-        <p>No soy la gran cosa, pero si me das una oportunidad... te haré muy feliz 💗</p>
+        <h1>Mariana, ¿Me amas? 💖</h1>
+        <p>Si tu respuesta es sí, me quedo contigo. Si es no… bueno, ese botón no te va a dejar escaparte.</p>
+        <p>Ya es demasiado tarde para huir 🤭💗✨</p>
+
 
         <button id="si">SI 💘</button>
         <button id="no">NO 😭</button>
