--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
 
     <audio id="bg-music" autoplay loop>
-        <source src="musica.mp3" type="audio/mpeg">
+        <source src="perfect-instrumental.mp3" type="audio/mpeg">
     </audio>
 
     <div class="container" id="main-content">
@@ -113,7 +113,7 @@
             document.body.innerHTML = `
             <div style="margin-top: 70px; padding: 15px; color:#4b007a;">
                 <h1 style="font-size: 28px;">Te amo 💞</h1>
-                <p style="font-size: 18px;">Gracias por decir que sí, Mariana.</p>
+                <p style="font-size: 18px;">Sabia que dirias que sí</p>
 
                 <img src="FOTO-DE-LOS-DOS.jpg" style="width:70%; max-width:300px; border-radius:15px; margin-top:20px;">
 
