--- a/carta.html
+++ b/carta.html
@@ -42,10 +42,11 @@
     <div class="carta">
         <!-- AQUÍ PEGAS TU CARTA -->
         <p>
-            [Pega aquí las dos páginas de tu carta sin miedo. HTML no te va a regañar.]
+            No eres cualquier persona para mí. Contigo aprendí que sí existe alguien en este mundo que puede calmarme con un mensaje, alguien que puede hacerme sonreír incluso cuando ni yo sé cómo estoy. Y por más que yo intente hacerme el "sin sentimientos", tú sabes que contigo siempre termino siendo romantico. No te niego que a veces me da miedo sentir tanto, porque no esperaba que tú y yo llegáramos a ser esto, Pero aquí estoy, apostando por lo que siento… porque hace rato que te volviste alguien muy importante de una manera que ya no tiene reversa.
+            Solo quiero que sepas algo... quiero cuidarte, acompañarte, escucharte, hacerte reír y hacerte sentir segura siempre. No soy perfecto, pero te juro que mis intenciones contigo sí lo son.
         </p>
     </div>
 
-    <img src="https://media.tenor.com/g8o0c0Qj7WAAAAAi/cat-love.gif">
+    <img src="feliz-dia-del-amor-y-la-amistad-498-x-385-gif-9k59rolqihug515e.gif">
 </body>
 </html>
