--- a/carta.html
+++ b/carta.html
@@ -37,7 +37,7 @@
     <h1>Te amo 💞</h1>
     <p>Sé que dirías que sí.</p>
 
-    <img src="FOTO-DE-LOS-DOS.jpg" alt="Nosotros">
+    <img src="foto_de_mi_amor.jpg" alt="Nosotros">
 
     <div class="carta">
         <!-- AQUÍ PEGAS TU CARTA -->
