--- a/carta.html
+++ b/carta.html
@@ -42,8 +42,23 @@
     <div class="carta">
         <!-- AQUÍ PEGAS TU CARTA -->
         <p>
-            No eres cualquier persona para mí. Contigo aprendí que sí existe alguien en este mundo que puede calmarme con un mensaje, alguien que puede hacerme sonreír incluso cuando ni yo sé cómo estoy. Y por más que yo intente hacerme el "sin sentimientos", tú sabes que contigo siempre termino siendo romantico. No te niego que a veces me da miedo sentir tanto, porque no esperaba que tú y yo llegáramos a ser esto, Pero aquí estoy, apostando por lo que siento… porque hace rato que te volviste alguien muy importante de una manera que ya no tiene reversa.
-            Solo quiero que sepas algo... quiero cuidarte, acompañarte, escucharte, hacerte reír y hacerte sentir segura siempre. No soy perfecto, pero te juro que mis intenciones contigo sí lo son.
+            No eres cualquier persona para mí.
+Y creo que eso lo entendí desde que empezamos a compartir días normales, de esos simples, caminar juntos, hablar bobadas, quedarnos en silencio sin que fuera incómodo… esas cosas chiquitas que sin darme cuenta se volvieron mi lugar seguro.
+
+Contigo aprendí que alguien puede calmarte solo con estar cerca, con un abrazo, con un mensaje tonto a mitad del día. Y por más que yo intente hacerme el duro o el “sin sentimientos”, contigo siempre pierdo, siempre termino siendo más cursi de lo que pensaba.
+
+A veces me pongo a pensar y me da duro extrañar cosas tan básicas, verte al lado mío, poder tocar tu mano, reírnos por cualquier cosa. Es raro como algo que era tan normal ahora se siente tan lejos.
+
+No te voy a mentir, la distancia pesa… hay días en los que solo quisiera saltarme todo este tiempo y aparecer otra vez contigo como si nada hubiera pasado. Pero al mismo tiempo todo esto me hizo darme cuenta de algo, lo que siento por ti no depende de qué tan cerca estés, depende de nosotros, y eso sigue igual o hasta más fuerte.
+
+Hace rato te volviste alguien demasiado importante para mí, de esas personas que ya no se van del corazón así porque sí, ya no hay reversa.
+
+Solo quiero que sepas algo… quiero seguir cuidándote, acompañándote, escucharte cuando tengas un mal día, hacerte reír cuando estés cansada. No soy perfecto, se me van mil cosas, a veces soy terco. No soy perfecto, pero te juro que mis intenciones contigo sí lo son.
+
+En mi cabeza siempre está la misma idea, que esto es temporal, que pronto vamos a volver a estar juntos, abrazarnos fuerte y recuperar todo ese tiempo.
+
+Te sigo eligiendo, incluso desde lejos. Y si te soy sincero… te extraño más de lo que digo.
+
         </p>
     </div>
 
