--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
     <div class="container" id="main-content">
         <img src="https://media.tenor.com/v5x4IcdOx6wAAAAi/cute-cat.gif" alt="gatito">
 
-        <h1>Mariana, ¿Me amas? 💖</h1>
+        <h1>Mariana, ¿Aun me amas? 💖</h1>
 
-        <p>Si tu respuesta es sí, me quedo contigo. Si es no… bueno, ese botón no te va a dejar escaparte.</p>
+        <p>Ni la distancia te salvara de mi mi amor.</p>
         <p>Ya es demasiado tarde para huir 🤭💗✨</p>
 
         <!-- Botón SI arriba -->
