--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <h1>Mariana, ¿Aun me amas? 💖</h1>
 
-        <p>Ni la distancia te salvara de mi mi amor.</p>
+        <p>Ni la distancia te salvara de mi, mi amor.</p>
         <p>Ya es demasiado tarde para huir 🤭💗✨</p>
 
         <!-- Botón SI arriba -->
