--- a/carta.html
+++ b/carta.html
@@ -35,7 +35,7 @@
 <body>
 
     <h1>Te amo 💞</h1>
-    <p>Sé que dirías que sí.</p>
+    <p>Sabia que dirías que sí.</p>
 
     <img src="foto_de_mi_amor.jpg" alt="Nosotros">
 
