--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="container" id="main-content">
         <img src="https://media.tenor.com/v5x4IcdOx6wAAAAi/cute-cat.gif" alt="gatito">
 
-        <h1>Mariana, ¿Aun me amas? 💖</h1>
+        <h1>Mariana, ¿Aún me amas? 💖</h1>
 
         <p>Ni la distancia te salvara de mi, mi amor.</p>
         <p>Ya es demasiado tarde para huir 🤭💗✨</p>
